RESOLVED FIXED168376
WKWebView inside a UICollectionView flashes when items are inserted above it
https://bugs.webkit.org/show_bug.cgi?id=168376
Summary WKWebView inside a UICollectionView flashes when items are inserted above it
Tim Horton
Reported 2017-02-15 09:52:55 PST
WKWebView inside a UICollectionView flashes when items are inserted above it
Attachments
Patch (18.44 KB, patch)
2017-02-15 09:53 PST, Tim Horton
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (843.58 KB, application/zip)
2017-02-15 11:08 PST, Build Bot
no flags
Patch (18.44 KB, patch)
2017-02-15 12:24 PST, Tim Horton
no flags
Archive of layout-test-results from ews124 for ios-simulator-wk2 (1.22 MB, application/zip)
2017-02-15 13:18 PST, Build Bot
no flags
Patch (28.31 KB, patch)
2017-02-15 15:50 PST, Tim Horton
no flags
Archive of layout-test-results from ews126 for ios-simulator-wk2 (15.77 MB, application/zip)
2017-02-15 17:02 PST, Build Bot
no flags
Patch (30.46 KB, patch)
2017-02-15 18:50 PST, Tim Horton
no flags
Patch (30.51 KB, patch)
2017-02-15 19:36 PST, Tim Horton
no flags
Archive of layout-test-results from ews124 for ios-simulator-wk2 (1.11 MB, application/zip)
2017-02-15 20:51 PST, Build Bot
no flags
Patch (30.64 KB, patch)
2017-02-16 12:29 PST, Tim Horton
no flags
Tim Horton
Comment 1 2017-02-15 09:53:31 PST
Build Bot
Comment 2 2017-02-15 11:07:57 PST
Comment on attachment 301627 [details] Patch Attachment 301627 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/3122794 New failing tests: scrollingcoordinator/ios/sync-layer-positions-after-scroll.html scrollingcoordinator/ios/non-stable-viewport-scroll.html
Build Bot
Comment 3 2017-02-15 11:08:01 PST
Created attachment 301634 [details] Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Tim Horton
Comment 4 2017-02-15 11:12:45 PST
Gonna need Simon's help with that one.
Tim Horton
Comment 5 2017-02-15 12:24:38 PST
Build Bot
Comment 6 2017-02-15 13:18:06 PST
Comment on attachment 301643 [details] Patch Attachment 301643 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/3123568 New failing tests: fast/text-autosizing/ios/autosize-width.html
Build Bot
Comment 7 2017-02-15 13:18:08 PST
Created attachment 301646 [details] Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Tim Horton
Comment 8 2017-02-15 15:50:45 PST
WebKit Commit Bot
Comment 9 2017-02-15 15:53:47 PST
Attachment 301668 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:292: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 18 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 10 2017-02-15 16:00:29 PST
Comment on attachment 301668 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=301668&action=review > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:2216 > + [webView _updateContentRectsWithState:!webView->_hasScheduledVisibleContentRectUpdateFromScrollViewInUnstableState]; It seems a little silly to pass state to _updateContentRectsWithState: which webView has internally. > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:2322 > + _visibleContentRectUpdateCallbacks.takeLast()(); Took me two reads to see ()() Maybe auto callback = _visibleContentRectUpdateCallbacks.takeLast(); callback();
Tim Horton
Comment 11 2017-02-15 16:04:12 PST
(In reply to comment #10) > Comment on attachment 301668 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=301668&action=review > > > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:2216 > > + [webView _updateContentRectsWithState:!webView->_hasScheduledVisibleContentRectUpdateFromScrollViewInUnstableState]; > > It seems a little silly to pass state to _updateContentRectsWithState: which > webView has internally. > > > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:2322 > > + _visibleContentRectUpdateCallbacks.takeLast()(); > > Took me two reads to see ()() > Maybe auto callback = _visibleContentRectUpdateCallbacks.takeLast(); > callback(); Both fair points, I will fix them (and wait for the bots).
Build Bot
Comment 12 2017-02-15 17:02:24 PST
Comment on attachment 301668 [details] Patch Attachment 301668 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/3125027 New failing tests: scrollingcoordinator/ios/sync-layer-positions-after-scroll.html pageoverlay/overlay-remove-reinsert-view.html
Build Bot
Comment 13 2017-02-15 17:02:29 PST
Created attachment 301675 [details] Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Tim Horton
Comment 14 2017-02-15 18:50:12 PST
Simon Fraser (smfr)
Comment 15 2017-02-15 18:52:05 PST
Comment on attachment 301686 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=301686&action=review > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:2212 > + return; > + _hasInstalledPreCommitHandlerForVisibleRectUpdate = YES; Blank line after the return please.
Tim Horton
Comment 16 2017-02-15 19:36:40 PST
WebKit Commit Bot
Comment 17 2017-02-15 19:39:05 PST
Attachment 301690 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:292: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 19 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 18 2017-02-15 20:51:19 PST
Comment on attachment 301690 [details] Patch Attachment 301690 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/3126051 New failing tests: fast/text-autosizing/ios/autosize-width.html
Build Bot
Comment 19 2017-02-15 20:51:26 PST
Created attachment 301698 [details] Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Tim Horton
Comment 20 2017-02-15 21:06:57 PST
This one makes even less sense.
Tim Horton
Comment 21 2017-02-16 12:29:49 PST
WebKit Commit Bot
Comment 22 2017-02-16 12:33:13 PST
Attachment 301798 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:292: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 19 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 23 2017-02-16 13:12:50 PST
Note You need to log in before you can comment on or make changes to this bug.