Source/WebKit2/UIProcess/ios/WKContentView.mm
@@ -573,7 +573,7 @@ static void storeAccessibilityRemoteConnectionInformation(id element, pid_t pid,
         [self updateFixedClippingView:fixedPositionRect];
 
         // We need to push the new content bounds to the webview to update fixed position rects.
-        [_webView _updateVisibleContentRects];
+        [_webView _scheduleVisibleContentRectUpdate];
     }
     
     // Updating the selection requires a full editor state. If the editor state is missing post layout
